# tunatale

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json  start-dev.sh  test.sh  walkthrough.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  languages.py  main.py
backend/app/anki/: add_vocab_notetype.py  anki_connect.py  audit_guids.py  backfill_cloze_sentence_translations.py  backfill_due_date_from_anki_due.py  backfill_guids.py  bootstrap_tt_revlog.py  cleanup_function_word_notes.py  cleanup_unsynced_listen_vocab.py  dedup_tt_revlog.py  dedupe_tt_collocations.py  delete_phonology_demos.py  diagnose_replay_match.py  field_map.py  fix_biti_clozes_only.py  fix_lingq_import_mess.py  import_seed.py  link_tt_images.py  measure_stage3b_premise.py  merge_dupes.py  migrate_cloze_to_production.py  migrate_homonyms.py  model_discovery.py  normalize_usns.py  notetype.py  protobuf_wire.py  repair_cloze_lemmas.py  repair_inconsistent_introduced_at.py  repair_nested_homonyms.py  replay_fsrs_from_revlog.py  reset_listen_graded_clozes.py  rollover.py  safety.py  sqlite_reader.py  sqlite_writer.py  sync.py  sync_common.py  sync_driver.py  sync_engine.py  sync_orchestrator.py  (+3 more)
backend/app/anki/archive/: __init__.py  backfill_cloze_sentence_translations.py  backfill_media_for_cards.py  cleanup_bogus_tt_revlog_rows.py  measure_stage3b_premise.py  merge_dupes.py  migrate_homonyms.py  notetype_builders.py
backend/app/anki/media/: choose_llm.py  forvo.py  normalize.py  pipeline.py  pixabay.py  query_llm.py  tts.py  vocab_media.py
backend/app/api/: _serializers.py  admin.py  anki.py  audio.py  curriculum.py  generation.py  llm.py  models.py  pipeline.py  srs.py  srs_images.py
backend/app/audio/: assembler.py  backfill_cloze_tts.py  cloze_tts.py  cues.py  edge_tts.py  pause_calculator.py  ports.py  render_service.py  renderer.py  transcode.py
backend/app/audio/preprocessing/: base.py  norwegian.py  slovene.py
backend/app/cards/: notetype.py  vocab_notetype.py
backend/app/cards/media/: query_llm.py  vocab_media.py
backend/app/common/: guid.py
backend/app/generation/: breakdown_audio.py  breakdown_preview.py  curriculum.py  enforcer.py  ids.py  json_parsing.py  norwegian_breakdown.py  pipeline.py  planner.py  prompts.py  section_builder.py  story.py  syllabify.py
backend/app/generation/language_styles/: no_style.md  sl_style.md  tl_style.md
backend/app/llm/: activity.py  cassette.py  client.py  translate.py  usage_ledger.py
backend/app/media/: importer.py
backend/app/models/: curriculum.py  language.py  lesson.py  srs_item.py  strategy.py  syntactic_unit.py
backend/app/plugins/anki_sync/: add_vocab_notetype.py  import_seed.py  model_discovery.py  normalize_usns.py  replay_fsrs_from_revlog.py  sqlite_reader.py  sync.py  sync_common.py  sync_driver.py  sync_engine.py  sync_orchestrator.py  sync_reader.py  sync_writer.py
backend/app/plugins/languages/en/: __init__.py
backend/app/plugins/languages/no/: __init__.py  breakdown_audio.py  breakdown_preview.py  norwegian_breakdown.py  syllabify.py
backend/app/plugins/languages/sl/: __init__.py  preprocessor.py  (+1 more)
backend/app/srs/: _anki_rng.py  build_function_word_list.py  collocation_matcher.py  database.py  db_base.py  db_collocations.py  db_counts.py  db_directions.py  db_histogram.py  db_ignored_lemmas.py  db_kv_cache.py  db_lemma_cache.py  db_listens.py  db_media.py  db_queue.py  db_reviews.py  db_revlog.py  db_sync.py  db_sync_conflicts.py  direction_fields.py  feedback.py  fsrs.py  function_words.py  grade_undo.py  invariants.py  lemmatizer.py  load_balancer.py  mastery.py  migrations.py  planner_snapshot.py  queue_engine.py  queue_stats.py  relemmatize_collocations.py  selector.py  tokenizer.py  transcript.py
backend/app/srs/anki_mirror/: __init__.py  cache_registry.py  load_balancer.py  queue_engine.py  queue_stats.py  rollover.py
backend/app/storage/: backfill_curriculum_day_titles.py  db_backup.py  lesson_io.py  lowercase_glosses.py  plan_io.py  regloss_lessons.py  store.py
backend/scripts/: .gitignore  check_language_literals.py  check_mock_boundaries.py  check_plugin_imports.py
backend/scripts/anki_archive/: __init__.py  audit_guids.py  backfill_guids.py  fix_html_concat_imports.py  merge_dupes.py  migrate_homonyms.py  sqlite_writer.py
backend/tests/: _fake_driver.py  conftest.py  language_literals_allowlist.txt  language_literals_grandfather.txt  mock_allowlist.txt  mock_grandfather.txt  test_anki_add_vocab_notetype.py  test_anki_audit_guids.py  test_anki_backfill_cloze_sentence_translations.py  test_anki_backfill_due_date_from_anki_due.py  test_anki_backfill_guids.py  test_anki_bootstrap_e2e.py  test_anki_bootstrap_tt_revlog.py  test_anki_cleanup_bogus_tt_revlog_rows.py  test_anki_cleanup_function_word_notes.py  test_anki_cleanup_unsynced_listen_vocab.py  test_anki_connect_client.py  test_anki_dedupe_tt_collocations.py  test_anki_delete_phonology_demos.py  test_anki_extra_isolation.py  test_anki_fallback_log.py  test_anki_fix_html_concat_imports.py  test_anki_fix_lingq_import_mess.py  test_anki_guid.py  test_anki_import_seed_readonly.py  test_anki_link_tt_images.py  test_anki_media_choose_llm.py  test_anki_media_forvo.py  test_anki_media_normalize.py  test_anki_media_pipeline.py  test_anki_media_pixabay.py  test_anki_media_query_llm.py  test_anki_media_tts.py  test_anki_merge_dupes_apply.py  test_anki_merge_dupes_cli.py  test_anki_merge_dupes_plan.py  test_anki_migrate_cloze_to_production.py  test_anki_migrate_homonyms.py  test_anki_model_discovery.py  test_anki_normalize_usns.py  (+170 more)
backend/tests/_helpers/: __init__.py  anki_db.py  anki_sync_create_new.py  anki_sync_pull.py  anki_sync_push.py  api_app_state.py  lemmatizer.py  protobuf.py  sync_server.py
backend/tests/anki_oracle/: harness_fixtures.py  oracle.py  synthetic_collection.py
backend/tests/cassettes/: TestPlannerLLM__test_norwegian_context_regression.json  TestPlannerLLM__test_two_turn_scenario.json  e2e.json
backend/tests/fixtures/: classla_analyses.json
(+226 files in other folders)
