[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tunatale-backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "edge-tts>=6.1.0",
    "soundfile>=0.12.1",
    "aiofiles>=23.0.0",
    "numpy>=2.0.0",
]

# Opt-in Slovene morphological analyzer (sentence-aware lemmas + A1 morphology
# features). Deliberately an *extra*, not a dependency-group: CI and the standard
# dev setup both run `uv sync --all-groups`, which does NOT pull extras — so this
# keeps PyTorch out of CI (the lemmatizer falls back to LowercaseLemmatizer when
# classla is absent). Install it explicitly:
#     uv sync --all-groups --extra classla
# classla 2.2.1 pins torch<=2.6, but torch only ships cp314 wheels from 2.12; the
# `[tool.uv] override-dependencies` below forces a 3.14-capable torch so the
# resolve succeeds. See docs/walkthrough.md §22.2.
[project.optional-dependencies]
# Anki sync engine. Optional + sync-only: imported ONLY in app/anki/sync_driver.py,
# which runs in a `uv run --with anki` subprocess. A no-sync user never installs it;
# the default `uv sync --all-groups` does NOT pull it (extra, not group). The runtime
# version is pinned via the `anki_pkg_version` setting (empty → latest), not here, so
# this stays a valid specifier regardless of which desktop Anki the user runs.
anki = ["anki"]
classla = ["classla==2.2.1"]
# Opt-in Stanford Stanza analyzer — the Norwegian (Bokmål/Nynorsk) analogue of the
# classla Slovene extra, and Stanza is the upstream project classla forks. Same
# extra-not-group treatment (keeps PyTorch out of CI; the torch==2.12.0 override
# below is shared). Install: `uv sync --all-groups --extra stanza`, then download
# the model once: `uv run python -c "import stanza; stanza.download('nb')"`, then
# set lemmatizer_type=stanza. See docs/walkthrough.md §22.2.
stanza = ["stanza"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.0",
    "respx>=0.22.0",
    "ruff>=0.9.0",
    "anyio>=4.0.0",
    "fsrs-rs-python>=0.8.0",
]

[tool.uv]
# Two 3.14 pin-overrides, both inert unless a heavy extra (classla/stanza/anki) is
# synced — protobuf/torch aren't pulled by the default `uv sync --all-groups`, so it
# stays PyTorch-free. See walkthrough §22.2.
#   torch:    classla 2.2.1 pins torch<=2.6, which has no cp314 wheel — torch only
#             gained 3.14 support at 2.12.
#   protobuf: classla 2.2.1 pins protobuf==4.21.2, whose google._upb C extension has
#             no cp314 wheel and dies with "Metaclasses with custom tp_new are not
#             supported" at import. classla tolerates it (imports protobuf lazily);
#             `import stanza` does NOT (it eagerly pulls google.protobuf via its
#             CoreNLP server bindings), so stanza needs a 3.14-capable protobuf.
override-dependencies = ["torch==2.12.0", "protobuf>=5.29"]

[tool.ruff]
target-version = "py314"
line-length = 120
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import ordering)
    "UP",    # pyupgrade (modernize syntax)
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
# Pin both first-party roots. Without "scripts", ruff auto-detects it racily
# (first-party vs third-party), so the required order of `from scripts` vs
# `from app` imports flip-flops and I001 fires intermittently in CI.
known-first-party = ["app", "scripts"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    # Surface ResourceWarnings (unclosed DB connections, files, etc.) so leaks are caught,
    # but ignore the "unclosed event loop" emitted during GC by pytest-asyncio's per-test
    # loop teardown (pytest_asyncio/plugin.py) — plugin-internal, not a project leak.
    "default::ResourceWarning",
    "ignore:unclosed event loop:ResourceWarning",
    # Third-party file-handle leak: reldi_tokeniser (a classla tokenizer dependency) opens
    # abbrev/punct files at import without closing them. Unfixable by us, and only present
    # when the optional `classla` extra is installed locally (never in CI). Listed LAST so
    # it takes precedence over default::ResourceWarning above (pytest inserts each filter
    # at the front, so the final entry wins).
    "ignore::ResourceWarning:reldi_tokeniser",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=app --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    # Retired one-shot migration/repair/analysis scripts now live under
    # scripts/anki_archive/ (outside source=["app"]), so they need no omit here.
    # See scripts/anki_archive/__init__.py.
    "app/srs/build_function_word_list.py",
    "app/anki/sync_driver.py",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
