[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tunatale-backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "edge-tts>=6.1.0",
    "soundfile>=0.12.1",
    "aiofiles>=23.0.0",
    "numpy>=2.0.0",
]

[project.optional-dependencies]
# Anki sync engine. Optional + sync-only: imported ONLY in app/anki/sync_driver.py,
# which runs in a `uv run --with anki` subprocess. A no-sync user never installs it;
# neither a plain `uv sync` nor `--all-groups` pulls it (extra, not group). The
# runtime version is pinned via the `anki_pkg_version` setting (empty → latest), not
# here, so this stays a valid specifier regardless of which desktop Anki the user runs.
anki = ["anki"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.0",
    "respx>=0.22.0",
    "ruff>=0.9.0",
    "anyio>=4.0.0",
    "fsrs-rs-python>=0.8.0",
]
# Per-language morphological analyzers (sentence-aware lemmas + A1 morphology
# features): classla for Slovene, stanza for Norwegian (Bokmål/Nynorsk; stanza is
# the upstream project classla forks). A DEFAULT dependency-group (see
# `[tool.uv] default-groups` below), NOT an extra — so every plain `uv sync`,
# `uv sync --all-groups`, or the implicit sync inside `uv run` installs AND keeps
# both. This inverts the old extra-based setup, where a human had to remember
# `--extra classla --extra stanza` on every sync or one would prune the other. CI
# opts OUT with `--no-group lemmatizers` to stay PyTorch-free — the party that wants
# the unusual (torch-free) behavior carries the flag, in machine-controlled config.
# classla 2.2.1 pins torch<=2.6 / protobuf==4.21.2, neither of which has a cp314
# wheel; the `[tool.uv] override-dependencies` below forces 3.14-capable builds.
# Models still download once per engine: `classla.download("sl")` /
# `stanza.download("nb")`. See docs/walkthrough.md §22.2.
lemmatizers = [
    "classla==2.2.1",
    "stanza",
]

[tool.uv]
# The lemmatizers group (classla/stanza) is a DEFAULT group, so a bare `uv sync`,
# `uv sync --all-groups`, and the implicit sync inside `uv run` all install and keep
# it — a working Slovene/Norwegian dev env is the default, with no flags to remember.
# CI stays PyTorch-free by opting out explicitly: `uv sync --all-groups --no-group
# lemmatizers` (.github/workflows/ci.yml). The `anki` extra is separate (not a group)
# — pulled only by the `uv run --with anki` driver subprocess, never by these syncs.
default-groups = ["dev", "lemmatizers"]
# Two 3.14 pin-overrides for the lemmatizers group. Inert unless torch/protobuf are
# actually pulled — CI's `--no-group lemmatizers` run never resolves them.
#   torch:    classla 2.2.1 pins torch<=2.6, which has no cp314 wheel — torch only
#             gained 3.14 support at 2.12.
#   protobuf: classla 2.2.1 pins protobuf==4.21.2, whose google._upb C extension has
#             no cp314 wheel and dies with "Metaclasses with custom tp_new are not
#             supported" at import. classla tolerates it (imports protobuf lazily);
#             `import stanza` does NOT (it eagerly pulls google.protobuf via its
#             CoreNLP server bindings), so stanza needs a 3.14-capable protobuf.
override-dependencies = ["torch==2.12.0", "protobuf>=5.29"]

[tool.ruff]
target-version = "py314"
line-length = 120
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import ordering)
    "UP",    # pyupgrade (modernize syntax)
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
# Pin both first-party roots. Without "scripts", ruff auto-detects it racily
# (first-party vs third-party), so the required order of `from scripts` vs
# `from app` imports flip-flops and I001 fires intermittently in CI.
known-first-party = ["app", "scripts"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    # Surface ResourceWarnings (unclosed DB connections, files, etc.) so leaks are caught,
    # but ignore the "unclosed event loop" emitted during GC by pytest-asyncio's per-test
    # loop teardown (pytest_asyncio/plugin.py) — plugin-internal, not a project leak.
    "default::ResourceWarning",
    "ignore:unclosed event loop:ResourceWarning",
    # Third-party file-handle leak: reldi_tokeniser (a classla tokenizer dependency) opens
    # abbrev/punct files at import without closing them. Unfixable by us, and only present
    # when the optional `classla` extra is installed locally (never in CI). Listed LAST so
    # it takes precedence over default::ResourceWarning above (pytest inserts each filter
    # at the front, so the final entry wins).
    "ignore::ResourceWarning:reldi_tokeniser",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=app --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    # Retired one-shot migration/repair/analysis scripts now live under
    # scripts/anki_archive/ (outside source=["app"]), so they need no omit here.
    # See scripts/anki_archive/__init__.py.
    "app/srs/build_function_word_list.py",
    "app/anki/sync_driver.py",
    # CLI audio-preview glue: pure TTS-process + filesystem I/O. Testable logic
    # lives in norwegian_breakdown / breakdown_preview (both fully covered).
    "app/generation/breakdown_audio.py",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
